# oso

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  DOCUMENTATION_COMPLETION_REPORT.md  DOCUMENTATION_SUMMARY.md  LICENSE  README-en.md  README-ja.md  README.md  flake.nix  memo.md  run.sh  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: CI_SETUP.md  NIX_MIGRATION.md  WORKFLOWS.md
.github/workflows/: batch-ai-doctor.yml  build-and-run.yml  ci.yml  docs.yml  multi-platform-ci.yml  multi-platform-release.yml  release.yml
archive_oso_loader/: .rust-analyzer.json  Cargo.toml  chibi_uefi.rs  config.toml  elf.rs  error.rs  fs.rs  main.rs  memory.rs  mmio.rs
archive_oso_loader/chibi_uefi/: memory.rs
archive_oso_loader/fs/: via_fs_module.rs  via_simple_filesystem.rs
archive_oso_loader/raw/: protocol.rs  service.rs  types.rs
archive_oso_loader/raw/types/: capsule.rs  memory.rs  text.rs  time.rs
archive_oso_loader/src/: lib.rs
components/kernel/core/: README.md  x86_64-unknown-none-elf.json
components/kernel/core/.cargo/: config.toml
components/kernel/core/src/: app.rs  lib.rs  main.rs
components/kernel/core/src/base/: util.rs
components/loader/core/: Cargo.toml  README.md
components/loader/core/src/: chibi_uefi.rs  elf.rs  lib.rs  main.rs
components/loader/core/src/chibi_uefi/: fs.rs  guid.rs  service.rs
components/loader/core/src/elf/: program_header.rs
components/loader/core/src/raw/: protocol.rs  service.rs  table.rs  types.rs
components/loader/core/src/raw/protocol/: device_path.rs
components/loader/core/src/raw/types/: graphic.rs  misc.rs  util.rs
components/oso_proc_macro/: README.md
components/oso_proc_macro_logic/: Cargo.toml
components/oso_proc_macro_logic/benches/: benchmarks.rs
components/oso_proc_macro_logic/src/: features.rs  font.rs  lib.rs  oso_proc_macro_helper.rs  test_elf_header_parse.rs  test_program_headers_parse.rs
components/oso_proc_macro_logic/tests/: integration_tests.rs
components/shared/core/: README.md
components/shared/core/src/: loader.rs  parser.rs
components/shared/host/oso_dev_util/: Cargo.toml  README.md
components/shared/no_std/core/: Cargo.toml  README.md
oso_binary_parser/: Cargo.toml
oso_binary_parser/src/: lib.rs
oso_bridge/: Cargo.toml
oso_bridge/src/: device_tree.rs  graphic.rs  lib.rs
oso_dev_util/: Cargo.toml
oso_dev_util/src/: cargo.rs  cli.rs  decl_manage.rs  fs.rs  lib.rs
oso_dev_util/src/decl_manage/: crate_.rs  package.rs  workspace.rs
oso_dev_util/tests/: integration_tests.rs
oso_dev_util_helper/: Cargo.toml  INFINITE_LOOP_FIXES.md  test_case_conversion.rs
oso_dev_util_helper/src/: cli.rs  fs.rs  lib.rs  util.rs
oso_error/: Cargo.toml
oso_error/src/: kernel.rs  lib.rs  loader.rs
oso_kernel/: Cargo.toml  aarch64-unknown-none-elf.json  x86_64-unknown-none-elf.json
oso_kernel/.cargo/: config.toml
oso_kernel/src/: app.rs  base.rs  driver.rs  graphic.rs  gui.rs  lib.rs  main.rs
oso_kernel/src/app/: cursor.rs  menu_bar.rs
oso_kernel/src/base/: graphic.rs  io.rs  text.rs  util.rs
oso_kernel/src/base/graphic/: color.rs  position.rs
oso_kernel/src/driver/: pci.rs
oso_kernel/src/gui/: console.rs  desktop.rs  font.rs  monitor.rs  text.rs
oso_kernel/src/gui/desktop/: window.rs
oso_kernel/src/gui/monitor/: desktop.rs
oso_kernel/src/gui/monitor/desktop/: window.rs
oso_loader/: CHANGELOG.md  Cargo.toml
oso_loader/.cargo/: config.toml
oso_loader/assets/: OVMF_VARS.fd  run_qemu.sh
oso_loader/assets/mnt/efi/boot/: bootaa64.efi
oso_loader/src/: chibi_uefi.rs  elf.rs  error.rs  fs.rs  graphic.rs  lib.rs  load.rs  main.rs  memory.rs  mmio.rs  raw.rs
oso_loader/src/chibi_uefi/: console.rs  controller.rs  fs.rs  guid.rs  memory.rs  protocol.rs  table.rs
oso_loader/src/elf/: hash.rs  program_header.rs  section_header.rs
oso_loader/src/fs/: via_simple_filesystem.rs
oso_loader/src/raw/: protocol.rs  service.rs  table.rs  types.rs
oso_loader/src/raw/protocol/: file.rs  graphic.rs  text.rs
oso_loader/src/raw/types/: capsule.rs  event.rs  file.rs  graphic.rs  memory.rs  misc.rs  protocol.rs  text.rs  time.rs  util.rs  variable.rs
oso_no_std_shared/: Cargo.toml
oso_no_std_shared/src/: bridge.rs  data.rs  device_tree.rs  lib.rs  parser.rs
oso_no_std_shared/src/bridge/: device_tree.rs  graphic.rs
oso_no_std_shared/src/data/: list.rs  node.rs  tree.rs
oso_no_std_shared/src/data/tree/: walk_rslt.rs  walker.rs
oso_no_std_shared/src/parser/: binary.rs  generator.rs  html.rs
oso_parser/: Cargo.toml
oso_parser/src/: binary.rs  generator.rs  lib.rs
oso_proc_macro/: Cargo.toml
oso_proc_macro/src/: helper.rs  lib.rs
oso_proc_macro/src/helper/: status_from_spec.rs
oso_proc_macro_2/: Cargo.toml  README.md
oso_proc_macro_2/src/: helper.rs  lib.rs
oso_proc_macro_helper/: Cargo.toml
oso_proc_macro_helper/src/: lib.rs
oso_proc_macro_logic/: Cargo.toml  README.md  TESTING.md
oso_proc_macro_logic/benches/: benchmarks.rs
oso_proc_macro_logic/src/: derive_from_pathbuf_for_crate.rs  features.rs  font.rs  fonts_data.rs  from_path_buf.rs  gen_wrapper_fn.rs  impl_init.rs  impl_int.rs  lib.rs  oso_proc_macro_helper.rs  status.rs  status_from_spec.rs  test_elf_header_parse.rs  test_program_headers_parse.rs  wrapper.rs
oso_proc_macro_logic/tests/: integration_tests.rs
oso_proc_macro_logic_2/: Cargo.toml  README.md
oso_proc_macro_logic_2/src/: cli.rs  cli.rs.bak  lib.rs
oso_util/: Cargo.toml
oso_util/src/: graphic.rs  lib.rs
oso_util/src/graphic/: helper.rs
src/: builder.rs
tmp/: article.md  draft.md  draft2.md  draft2_ja.md  lldb_startup_command.txt  q_chat.md
util_common_code/: Cargo.toml
xtask/: Cargo.toml  README.md  TEST_SUMMARY.md
xtask/assets/: OVMF_VARS.fd
xtask/src/: builder.rs  lib.rs  main.rs  qemu.rs  shell.rs  workspace.rs
xtask/tests/: README.md  builder_tests.rs  error_handling_tests.rs  integration_tests.rs  pure_unit_tests.rs  qemu_tests.rs  shell_extended_tests.rs  standalone_tests.rs  test_runner.rs  workspace_tests.rs
(+21 files in other folders)
