[package]
name = "oso_kernel"
version = "0.1.0"
edition = "2024"

[dependencies]
oso_binary_parser = { path = "../oso_binary_parser" }
oso_bridge = { path = "../oso_bridge" }
oso_error = { path = "../oso_error" }
oso_proc_macro = { path = "../oso_proc_macro" }

[features]
rgb = []
bgr = []
bitmask = []
bltonly = []
default = ["bltonly"]
