[package]
name = "oso_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { version = "*", default-features = false }
goblin = { version = "*", features = [
	"elf32",
	"elf64",
	"endian_fd",
], default-features = false }
log = "*"
oso_bridge = { path = "../oso_bridge" }
oso_proc_macro = { path = "../oso_proc_macro" }
uefi = { version = "*", features = [
	"panic_handler",
	"logger",
	"alloc",
	"global_allocator",
] }
uefi-raw = "*"

# [features]
# x86_64 = []
# aarch64 = []
# risc_v = []
# default = ["x86_64"]
