[package]
name = "oso_loader"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = { version = "*", default-features = false }
goblin = { version = "*", features = [
	"elf32",
	"elf64",
	"endian_fd",
], default-features = false }
log = "*"
oso_bridge = { path = "../oso_bridge" }
oso_proc_macro = { path = "../oso_proc_macro" }

[features]
rgb = []
bgr = []
bitmask = []
bltonly = []
default = ["bltonly"]
