[package]
name = "oso_loader"
version = "0.1.0"
edition = "2024"
description = "UEFI-based bootloader for the OSO operating system with ELF kernel loading support"
authors = ["OSO Development Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oso-os/oso"
documentation = "https://docs.rs/oso_loader"
keywords = ["bootloader", "uefi", "elf", "kernel", "operating-system"]
categories = ["embedded", "no-std", "os"]
readme = "README.md"

[dependencies]
oso_error = { path = "../oso_error" }
oso_no_std_shared = { path = "../oso_no_std_shared" }
oso_proc_macro = { path = "../oso_proc_macro" }

[features]
default = ["bltonly"]
# Graphics pixel format support
rgb = []
bgr = []
bitmask = []
# Block transfer only mode (default)
bltonly = []

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
