[package]
name = "oso_proc_macro"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
anyhow = "*"
colored = "*"
html5ever = "0.27"
markup5ever = "*"
markup5ever_rcdom = "*"
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
tendril = "*"
ureq = "*"
