[package]
name = "oso_proc_macro"
version = "0.1.0"
edition = "2024"
description = "Procedural macros for the OSO operating system project"
authors = ["OSO Project Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/oso-project/oso"
documentation = "https://docs.rs/oso_proc_macro"
keywords = ["os", "kernel", "procedural-macros", "uefi", "elf"]
categories = ["development-tools::procedural-macro-helpers", "os"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
anyhow = "*"
colored = "*"
oso_proc_macro_logic = { path = "../oso_proc_macro_logic" }
proc-macro2 = "*"
quote = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
