[package]
name = "oso_proc_macro_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
colored = "*"
html5ever = "0.27"
itertools = "*"
markup5ever = "*"
markup5ever_rcdom = "*"
proc-macro2 = "*"
quote = "*"
string_cache = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
tendril = "*"
ureq = "*"
util_common_code = { path = "../util_common_code" }
