[package]
name = "oso_proc_macro_logic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "*"
colored = "*"
html5ever = "0.27"
itertools = "*"
markup5ever = "*"
markup5ever_rcdom = "*"
oso_dev_util_helper = { path = "../oso_dev_util_helper" }
proc-macro2 = "*"
quote = "*"
string_cache = "*"
syn = { version = "*", features = ["full", "extra-traits"] }
tendril = "*"
toml = { version = "*", features = ["parse"] }
ureq = "*"

[dev-dependencies]
proptest = "*"
tempfile = "3.0"

[[bench]]
name = "benchmarks"
harness = false
