[package]
name = "oso_loader"
version = "0.1.0"
authors = ["OSO Development Team"]
categories = ["embedded", "no-std", "os"]
documentation = "https://docs.rs/oso_loader"
edition = "2024"
keywords = ["bootloader", "uefi", "elf", "kernel", "operating-system"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oso-os/oso"
description = "UEFI-based bootloader for the OSO operating system with ELF kernel loading support"

[dependencies]
oso_error = { path = "../oso_error" }
oso_no_std_shared = { path = "../oso_no_std_shared" }
oso_proc_macro = { path = "../oso_proc_macro" }

[features]
default = ["bltonly"]
# Graphics pixel format support
rgb = []
bgr = []
bitmask = []
# Block transfer only mode (default)
bltonly = []

[package.metadata.docs.rs]
# Documentation configuration for docs.rs
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints.clippy]
tabs_in_doc_comments = "allow"
mut_from_ref = "allow"
